// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package admin;

option go_package = "infra/tricium/api/admin/v1;admin";

// Driver implements the internal driver API of the Tricium service.
service Driver {
  // Trigger triggers a build for a Tricium worker.
  rpc Trigger(TriggerRequest) returns (TriggerResponse);

  // Collect collects results from a build running a Tricium worker.
  rpc Collect(CollectRequest) returns (CollectResponse);
}

// TriggerRequest contains the details for launching a build for a worker.
message TriggerRequest {
  int64 run_id = 1;
  reserved 2;
  string worker = 3;
}

message TriggerResponse {}

// CollectRequest contains the details needed to collect results from a worker.
message CollectRequest {
  int64 run_id = 1;

  reserved 2;

  // Worker name of the worker to collect results for.
  string worker = 3;

  reserved 4;

  // The Buildbucket build ID.
  //
  // Used to collect results from the completed buildbucket worker task.
  int64 build_id = 5;
}

message CollectResponse {}
